# auto_oo

./: .gitignore  README.md  Tutorial.ipynb  pyproject.toml
.github/workflows/: build.yml
examples/: Tutorial.ipynb  Tutorial_Berry_phase.ipynb  Tutorial_auto_oo.ipynb
src/auto_oo/: __init__.py  moldata_pyscf.py  noisy_oo_pqc.py  oo_energy.py  oo_pqc.py  pqc.py
src/auto_oo/ansatz/: __init__.py  noisy_pqc.py  pqc.py  uccd.py
src/auto_oo/ansatze/: __init__.py  kUpCCD.py  uccd.py
src/auto_oo/main/: __init__.py  moltools.py  noisy_oo_pqc.py  oo_energy.py  oo_pqc.py
src/auto_oo/moldata/: moldata.py  moltools.py
src/auto_oo/moldata_pyscf/: __init__.py  moldata_pyscf.py
src/auto_oo/newton_raphson/: __init__.py  newton_raphson.py
src/auto_oo/oo_energy/: __init__.py  integrals.py  oo_energy.py
src/auto_oo/oo_pqc/: noisy_oo_pqc.py  oo_pqc.py
src/auto_oo/opt/: __init__.py  newton_raphson.py  oo_vqe.py
src/auto_oo/orbital/: __init__.py  givens_rotations.py  orbital_rotations.py
src/auto_oo/utils/: __init__.py  active_space.py  miscellaneous.py  newton_raphson.py
src/auto_oo/vqe/: __init__.py  oo_vqe.py  uccd.py
test/: test_hnch2_oovqe.py  test_moldata_pyscf.py  test_noisy_oo_pqc.py  test_oo_energy.py  test_oo_pqc.py  test_pqc.py
test/utils/: test_active_space.py  test_miscellaneous.py  test_newton_raphson.py
