[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_oo"
version = "0.1"
authors = [
  { name="Emiel Koridon", email="koridon@lorentz.leidenuniv.nl" },
  { name="Stefano Polla", email="polla@lorentz.leidenuniv.nl" },
]
description = "OO with automatic differentation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "cirq",
    "openfermion",
    "pennylane",
    "pyscf",
    "pytorch"
]

[project.urls]
"Homepage" = "https://github.com/Emieeel/auto_oo"
"Bug Tracker" = "https://github.com/Emieeel/auto_oo/issues"
